--- a/Phase1/Project2/style.css
+++ b/Phase1/Project2/style.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url("https://raw.githubusercontent.com/jimboden1/2058544_jesse_imboden_MEAN_stack/master/Phase1/Project2/Mock_Background.jpeg");
+  background-image: url("Mock_Background.jpeg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
