small adjustments made

--- a/Phase2/Project3/src/app/app.component.html
+++ b/Phase2/Project3/src/app/app.component.html
@@ -25,7 +25,8 @@
         </form>
       </div>
     </mat-grid-tile>
-    <mat-grid-tile><div>
+    <mat-grid-tile>
+      <div>
       <div>
         <h3>Current Task List</h3>
       </div>
